Fix pan gesture

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,1 @@
-[B] - При добавлении скролла, переменная enableCloseByPan не работает.
+[B] - При добавлении скролла, переменная enableCloseByPan не работает. [Fixed in 0.2.4]
